--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "easy-peasy": "^5.0.4",
         "material-table": "^2.0.3",
         "notistack": "^2.0.5",
+        "query-string": "^7.1.1",
         "react-router-dom": "^5.2.0"
     }
 }
